--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -64,6 +64,9 @@
       <a class="item" href="{{pomspath}}/show_campaigns">
         Campaign Stages
       </a>
+      <a class="item" href="{{pomspath}}/sample_workflows">
+        Sample Workflows
+      </a>
 <!--
       <a class="item" href="{{pomspath}}/show_campaigns?active=False">
         InActive Campaign Stages
