--- a/webservice/templates/campaign_edit.html
+++ b/webservice/templates/campaign_edit.html
@@ -6,6 +6,8 @@
 
 {%block title%}
 POMS
+<script src="{{pomspath}}/static/js/json_field_editor.js"></script>
+<link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/json_field_editor.css">
 {%endblock%}
 
 <style type="text/css">
@@ -481,14 +483,24 @@ function create_row(index, key, value) {
 
 var ep_parms = [];
 
+/* 
+ * was:
+ * $("#edit_param_modal_btn").click(function() {
+ *   setup_modal("#ae_param_overrides");
+ * });
+ * 
+ * $("#edit_param_test_modal_btn").click(function() {
+ *   setup_modal("#ae_test_param_overrides");
+ * });
+ */
+
 $("#edit_param_modal_btn").click(function() {
-  setup_modal("#ae_param_overrides");
+   json_field_editor.start('ae_param_overrides');
 });
 
 $("#edit_param_test_modal_btn").click(function() {
-  setup_modal("#ae_test_param_overrides");
+   json_field_editor.start('ae_test_param_overrides');
 });
-
 
 function setup_modal(fieldid) {
   $("#ep_tbody").empty("");
